--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         
             <div id="gym" class="work">
                 <img src="images/gym.png">
-                <h4>Power-X-gym(gym website)</h4>
+                <h4>Power-X-gym</h4>
                 <p>THis is a gym website based on online which is created on client's requirement .</p>
 
             </div>
             <div id="agency" class="work">
                 <img src="images/agency.png">
                 <h4>Creative Agency</h4>
-                <p>This is a tourist agency website,this was also built on cilent's requirement</p>
+                <p>THis is a agency website based on online which is created on client's requirement</p>
             </div>
             <div id="music" class="work">
                 <img src="images/music.png">
                 <h4>Hard Rock Music</h4>
-                <p>This is a music based website,from where people can download free music</p>
+                <p>THis is a music website based on online which is created on client's requirement</p>
 
 
             </div>
